--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gravity Flip Game</title>
+    <title>Jumping Pig Game</title>
     <style>
         body { margin: 0; overflow: hidden; }
         #info {
