--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div id="info">
-        <img id="instructions" src="../assets/images/instructions.png" alt="Instructions" width="400">
+        <img id="instructions" src="assets/images/instructions.png" alt="Instructions" width="400">
     </div>
     <div id="stats-container">
         <div id="time">Time: 0:00</div>
