Revert "remove score"
This reverts commit 371df0ab569f4fdb641a69a6f6cf57a3ce1a999f.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             padding: 10px 20px;
             border-radius: 10px;
         }
-        #time, #best {
+        #time, #score, #best {
             margin: 5px 0;
         }
         #instructions img {
@@ -31,6 +31,7 @@
 <body>
     <div id="stats-container">
         <div id="time">Time: 0:00</div>
+        <div id="score">Score: 0</div>
         <div id="best">Best: 0</div>
     </div>
     <script type="module" src="src/game.js"></script>
