--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 <body>
     <div id="stats-container">
         <div id="time">Time: 0:00</div>
-        <div id="score">Score: 0</div>
-        <div id="best">Best: 0</div>
+        <div id="best">Best Time: 0:00</div>
     </div>
     <script type="module" src="src/game.js"></script>
 </body>
