--- a/index.html
+++ b/index.html
@@ -2,37 +2,13 @@
 <html>
 <head>
     <title>Jumping Pig Game</title>
-    <style>
-        body { margin: 0; overflow: hidden; }
-        #stats-container {
-            position: absolute;
-            top: 50px;
-            right: 50px;
-            color: white;
-            font-family: sans-serif;
-            pointer-events: none;
-            font-size: 24px;
-            text-shadow: 1px 1px 1px black;
-            text-align: right;
-            background-color: rgba(0, 0, 0, 0.3);
-            padding: 10px 20px;
-            border-radius: 10px;
-        }
-        #time, #score, #best {
-            margin: 5px 0;
-        }
-        #instructions img {
-            width: 100%;
-            height: auto;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <div id="stats-container">
         <div id="time">Time: 0:00</div>
         <div id="best">Best Time: 0:00</div>
     </div>
-    <script type="module" src="src/game.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
